--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
+  "testEnvironment": "node",
   "snapshotSerializers": ["enzyme-to-json/serializer"],
-  "setupFiles": ["raf/polyfill", "<rootDir>/src/setupTests.js"]
+  "setupFiles": ["<rootDir>/src/tests/setupTests.js"]
 }
