--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.10.0"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "firebase": "^5.5.8",
     "normalize.css": "^8.0.1",
     "react": "^16.6.3",
