--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ketoptions",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jeffreyrjohnson.github.io/ketoptions/",
   "engines": {
     "npm": "6.4.1",
     "node": "10.10.0"
@@ -27,7 +28,9 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "snapshotSerializers": [
@@ -47,6 +50,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "gh-pages": "^2.0.1",
     "jest-enzyme": "^7.0.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
